[package]
name = "pickls-config"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["LSP", "protocol", "command-line", "ide", "config"]
categories = ["development-tools", "text-editors"]
description = "Configuration Format for Pickls"
readme = "README.md"
homepage = "https://github.com/wbbradley/pickls-config"
repository = "https://github.com/wbbradley/pickls-config"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
